# stamd

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE.md  Makefile  README.md  article.c  article.h  config.c  config.h  line.c  line.h  lineQueue.c  lineQueue.h  main.c  queue.c  queue.h  stack.c  stack.h  stamd-index.c  stamd.c  text.c  text.h
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: article.cpp  article.hpp  index.cpp  index.hpp  indexer.cpp  indexer.hpp  main.cpp  options.hpp  utility.hpp
src/: stamd.c
test/: CMakeLists.txt
